[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refrakt_viz"
version = "0.1.0"
description = "Visualization components for the Refrakt ML/DL framework."
authors = [
    { name = "Akshath Mangudi" }
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.0.0",
    "numpy>=1.18.0",
    "scikit-learn>=0.24.0"
]

[project.optional-dependencies]
interactive = [
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "pillow>=8.0.0"
]
dev = [
    "mypy>=1.0.0",
    "radon>=5.0.0",
    "lizard>=1.17.10"
] 